oxiplate-derive/tests/broken/derive/too-many-parent-directories.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate = "../../../../../../../../../../../../../../../../../../README.md"]
struct Data;

fn main() {
    print!("{}", Data);
}